--- a/client/src/components/NavBar.module.css
+++ b/client/src/components/NavBar.module.css
@@ -8,7 +8,7 @@ ul {
   list-style: none;
 }
   
-a {
+.navLink {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.55); 
   font-size: 18px;
@@ -16,13 +16,13 @@ a {
   transition: color .17s ease-in-out;
 }
 
-a:focus {
+.navLink:focus {
     color: rgba(255, 255, 255, 0.55) !important;
     text-decoration: none !important;
 }
 
-a:hover,
-a:active {
+.navLink:hover,
+.navLink:active {
     color: rgba(255, 255, 255, 0.90) !important;
     text-decoration: none !important;
 }
