--- a/client/src/pages/Login.module.css
+++ b/client/src/pages/Login.module.css
@@ -1,3 +1,11 @@
+.registerLink {
+    color: black;
+}
+
+.registerLink:hover {
+    color: #1212FF;
+}
+
 .mainContainer {
     flex-direction: column;
     display: flex;
@@ -15,30 +23,3 @@
     justify-content: center;
     margin-bottom: 25px;
 }
-
-.inputContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-}
-
-.inputBox {
-    height: 48px;
-    width: 400px;
-    font-size: large;
-    border-radius: 8px;
-    border: 1px solid grey;
-    padding-left: 8px;
-}
-
-.inputBox:focus-visible {
-    outline-color: lightblue;
-}
-
-.inputContainer > .errorLabel {
-    color: red;
-    font-size: 16px;
-}
-
-
