--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,3 @@
-
-
-
 .resultContainer,
 .historyItem { 
   flex-direction: row;
@@ -10,11 +7,6 @@
   justify-content: space-between;
 }
 
-
-
-
-
-
-
-
-
+* {
+  font: 100% "Roboto", "Arial", "Helvetica", sans-serif;
+}
