--- a/client/src/components/Button.module.css
+++ b/client/src/components/Button.module.css
@@ -4,6 +4,7 @@ button {
     margin: 8px;
     font-size: 24px;
     border-radius: 8px;
+    border: 2px solid;
     cursor: pointer;
     transition: color .17s ease-in-out, background-color .17s ease-in-out, border-color .17s ease-in-out, box-shadow .17s ease-in-out;
 }
