--- a/client/src/components/Control.module.css
+++ b/client/src/components/Control.module.css
@@ -36,9 +36,11 @@
     -webkit-appearance: none !important;
     opacity: 1 !important;
     border-left: 1px solid #d8d8d8;
+    height: 50px;
     width: 35px;
     cursor: pointer;
 }
+
 
 .control[type=file]::file-selector-button {
     height: 100%;
