--- a/client/src/pages/Orders.module.css
+++ b/client/src/pages/Orders.module.css
@@ -1,4 +1,4 @@
-.cartItem {
+.orderItem {
     margin: 10px;
     padding: 10px;
     border: 1px solid #bbb;
@@ -8,13 +8,13 @@
 
     transition: color .17s ease-in-out, background-color .17s ease-in-out, border-color .17s ease-in-out, box-shadow .17s ease-in-out;
 }
-  
-.cartItem span {
+
+.orderItem span {
     font-size: 1.2em;
     text-decoration: none;
     color: #333;
 }
 
-.cartItem.selected {
+.oderItem.selected {
     background-color: #aaa;
 }
